--- a/Dissertation/conclusion.tex
+++ b/Dissertation/conclusion.tex
@@ -6,16 +6,11 @@
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 %% Поэтому имеет смысл сделать эту часть общей и загрузить из одного файла в автореферат и в диссертацию:
 
-Основные результаты работы заключаются в следующем.
-\input{common/concl}
-И какая-нибудь заключающая фраза.
+Основные результаты работы заключаются в следующем:
 
-Последний параграф может включать благодарности.  В заключение автор
-выражает благодарность и большую признательность научному руководителю
-Иванову~И.\,И. за поддержку, помощь, обсуждение результатов и~научное
-руководство. Также автор благодарит Сидорова~А.\,А. и~Петрова~Б.\,Б.
-за помощь в~работе с~образцами, Рабиновича~В.\,В. за предоставленные
-образцы и~обсуждение результатов, Занудятину~Г.\,Г. и авторов шаблона
-*Russian-Phd-LaTeX-Dissertation-Template* за~помощь в оформлении
-диссертации. Автор также благодарит много разных людей
-и~всех, кто сделал настоящую работу автора возможной.
+\input{common/concl}
+
+Таким образом, перечисленные выше результаты позволяют сделать вывод об успешном решении поставленных задач и достижения цели исследования.
+
+В заключении автор выражает благодарность научному руководителю А.~Е.~Шевелеву за научное руководство при написании диссертации, а так же в научной деятельности автора диссертации, М.~В.~Ильясовой за сотрудничество и помощь в публикации многих результатов, В.~Г.~Киптилому за помощь в вопросах взаимодействия и работы на токамаке JET.
+
