--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -51,15 +51,17 @@
 Если каким-то образом образуется электрон со скоростью, больше критической скорости $v_c$, то он переходит в режим неограниченного ускорения. Такие электроны называются <<убегающими>> \cite{Golant1977}.
 
 Можно рассчитать величину электрического поля, при котором в режим убегания переходят электроны с тепловой скоростью. Это поле оказывается равным 
-\begin{equation*}
+\begin{equation}
+  \label{eq:dreicerField}
   E_D = \frac{ n e^3 \Lambda }{ 4 \pi \epsilon_0^2 m_e v_{Te}^2 }
-\end{equation*}
+\end{equation}
 и называется полем Дрейсера \cite{Dreicer1959,Golant1977,Wesson2004}. 
 
 Когда электрическое поле достаточно мало, критическая скорость, рассчитанная по уравнению \ref{eq:critVelocity}, приближается к скорости света $c$. Для релятивистских электронов время замедления почти постоянно и существенного уменьшения силы трения с увеличением их энергии уже не происходит. Соответственно, для электрических полей, таких что
-\begin{equation*}
+\begin{equation}
+  \label{eq:criticalField}
   E < E_c = \frac{ n e^3 \Lambda }{ 4 \pi \epsilon_0^2 m_e c^2 }
-\end{equation*}
+\end{equation}
 генерации убегающих электронов не происходит ни при каких обстоятельствах \cite{Wesson2004}.
 
 На большем временном масштабе скорость убегания электронов определяется столкновительной диффузией в пространстве скоростей. По мере убегания более быстрых электронов они замещаются электронами, диффундирующими через хвост максвелловского распределения скоростей. Подробные расчеты дают следующую результирующую скорость убегания на единицу объема \cite{Wesson2004}: 
