--- a/Dissertation/part4.tex
+++ b/Dissertation/part4.tex
@@ -208,8 +208,7 @@
 
 На токамаке ASDEX Upgrade разработаны и введены в эксплуатацию два спектрометра жёсткого рентгеновского излучения на основе сцинтилляционных кристаллов LaBr3(Ce) небольшого размера. Спектрометры использовались в экспериментах по генерации убегающих электронов в разрядах с малой плотностью плазмы при инжекции небольшого количества аргона. В течение всего разряда сигнал регистрировался с частотой дискретизации 400~МГц. Для амплитудного анализа регистрируемого сигнала в условиях высокой нагрузки спектрометра с большим количеством наложенных импульсов был использован метод фиттинга, позволяющий достичь скорости счета спектрометра $10^7$~с${}^{-1}$ при относительно небольшом числе неразрешённых импульсов. Анализ функции распределения убегающих электронов по энергиям, полученной в результате обработки измеренных спектров с помощью программы DeGaSum, позволил получить зависимость максимальной энергии убегающих электронов от времени. Убегающие электроны достигают максимальной энергии 20~МэВ через 40--60~мс после инжекции аргона, после чего энергия электронов постепенно снижается до $\approx{12,4}$~МэВ.
 
-
-Полученные распределения убегающих электронов позволили оценить плотность газовой мишени и видимую для спектрометров долю пучка убегающих электронов. Плотность аргона, соответствующая 62.5\% от всего инжектированного аргона, находится в хорошем соответствии с результатами из работы~\cite{Pautasso2020}, и моделью транспорта примесных ионов в центральную плазму, рассмотренной в~\cite{Linder2020}. Получена энергетическая зависимость максимальной энергии убегающих электронов от количества вдуваемого в плазму аргона, которая оказалась не существенной: максимальная энергия уменьшалась примерно на 10\% при увеличении вдувания аргона с 0,14 до 0,73~бар. Численные расчёты с помощью моделирования тестовых частиц, выполненные с использованием кода PREDICT, показали, что для того, чтобы эволюция максимальной энергии соответствовала измеренным значениям, плотность аргона должна быть на порядок ниже значений, полученных по измерениям с помощью жёсткого рентгеновского излучения. Возможные причины такого расхождения находятся в стадии дальнейшего изучения. Тем не менее, результаты настоящего моделирования дают качественное представление о динамике убегающих электронов при тнжекции примеси.
+Полученные распределения убегающих электронов позволили оценить плотность газовой мишени и видимую для спектрометров долю пучка убегающих электронов. Плотность аргона, соответствующая 62.5\% от всего инжектированного аргона, находится в хорошем соответствии с результатами из работы~\cite{Pautasso2020}, и моделью транспорта примесных ионов в центральную плазму, рассмотренной в~\cite{Linder2020}. Получена энергетическая зависимость максимальной энергии убегающих электронов от количества вдуваемого в плазму аргона, которая оказалась не существенной: максимальная энергия уменьшалась примерно на 10\% при увеличении вдувания аргона с 0,14 до 0,73~бар. Численные расчёты с помощью моделирования тестовых частиц, выполненные с использованием кода PREDICT, показали, что для того, чтобы эволюция максимальной энергии соответствовала измеренным значениям, плотность аргона должна быть на порядок ниже значений, полученных по измерениям с помощью жёсткого рентгеновского излучения. Возможные причины такого расхождения находятся в стадии дальнейшего изучения. Тем не менее, результаты настоящего моделирования дают качественное представление о динамике убегающих электронов при инжекции примеси.
 
 Проведенное измерение продемонстрировало возможность использования малогабаритных спектрометров для диагностики убегающих электронов на более крупных установках, таких как ITER, где разрабатывается система мониторинга жёсткого рентгеновского излучения с кристаллами с аналогичными характеристиками. В настоящей работе весь ток плазмы после инжекции аргона переносился убегающими электронами, что позволило оценить плотность аргона в центре плазмы. В будущих экспериментах на ITER можно будет решить обратную задачу нахождения тока убегающих электронов по измеренному сигналу со спектрометров жёсткого рентгеновского излучения при условии, что известны распределения примесей. Для адекватной оценки тока убегающих электронов необходимо использовать спектрометрическую систему, имеющую не менее двух линий обзора плазмы, в поле наблюдения которой находится всё сечение плазменного столба. Измерение синхротронного излучения в инфракрасном и видимом диапазонах может дополнить информацию о размере и положении пучка убегающих электронов, а также о наличии электронов с энергиями выше 10~МэВ.
 
