--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1441,6 +1441,19 @@
 }
 
 
+@article{Jones1986,
+  author = {E.M. Jones},
+  title = {Status of the JET control and data acquisition system CODAS},
+  journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume = {247},
+  number = {1},
+  pages = {58-67},
+  year = {1986},
+  issn = {0168-9002},
+  doi = {https://doi.org/10.1016/0168-9002(86)90537-1},
+  url = {https://www.sciencedirect.com/science/article/pii/0168900286905371},
+}
+
 
 
 %@ARTICLE{Article,
