--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -43,8 +43,8 @@
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
   \item Развиты и реализованы в программном коде методы цифровой обработки сигналов, позволяющие осуществлять измерения спектра гамма и рентгеновского излучения с сцинтиляционных детекторов на основе кристаллов LaBr${}_3$(Ce) при скорости счётра 10${}^7$ и выше;
   \item Развиты и реализованы в программном коде методы восстановления функции распределения убегающих электронов по энергии на основе спектров излучения, зарегистрированных с помощью сцинтиляционных детекторов;
-  \item Про детектор на ASDEX;
-  \item Про выводы на токамаках Jet, Asdex.
+  \item Разработан гамма-спектрометр REGARDS, который затем использовался на токамаке Asdex Upgrade;
+  \item На токамаках Asdex Upgrade и JET были проведены измерения  жёсткого рентгеновского излучения от убегающих электронов. Полученные данные были обработаны, были получены функции распределения убегающих электронов. 
 \end{enumerate}
 
 {\influence}\begin{enumerate}[beginpenalty=10000]
