--- a/Dissertation/part5.tex
+++ b/Dissertation/part5.tex
@@ -17,6 +17,8 @@
 
 В дополнение к этим спектрометрам для получения двумерных измерений профилей гамма-излучения может использоваться гамма-камера, состоящая из 19~компактных детекторов с 10~горизонтальными и 9~вертикальными линиями обзора (рисунок~\ref{fig:jetHxrDetectorsScheme}, справа). Компактные детекторы изготовлены из кристаллов LaBr3(Ce) $\varnothing 25 \times 17$~мм~\cite{Rigamonti2018}. Выходной сигнал от каждого детектора оцифровывается 13-битном АЦП со скоростью 200 отсчётов в секунду~\cite{Fernandes2018}.
 
+Все диагностики токамака JET сохраняют результаты измерений в системе CODAS~\cite{Jones1986}. Для обработки данных в компьютерный код ``DeGaSum'' была добавлена возможность загрузки данных из системы CODAS с всех вышеперечисленных гамма-диагностик. Для детекторов на основе BGO и HPGe доступны спектры, созданные в результате обработки с помощью программно-аппаратных средств диагностик. Для детекторов NaI(Tl), LaBr3(Ce) доступны осциллограммы, обработка которых с помощью продвинутых алгоритмов, описанных в главе~\ref{ch:ch2}, может позволить получить больше полезной информации. Итоговые спектры жёсткого рентгеновского излучения могут быть обработаны с помощью алгоритмов, описанных в главе~\ref{ch:ch3}. 
+
 % ==========================================================
 
 \section{Восстановление функции распределения убегающих электронов на токамаке JET}
@@ -72,11 +74,6 @@
 
 Ток убегания, создаваемый электронами с энергией более 2~МэВ, был определён путем интегрирования потока электронов, пересекающего вертикальное поле зрения спектрометра. Зависимость тока убегающих электронов от времени показана на рисунке~\ref{fig:jetPulseParams82715}~(d). Значения тока плазмы и усредненной по линии плотности электронов представлены на рисунках~\ref{fig:jetPulseParams82715}~(a) и (b) соответственно. Кривая скорости счета гамма-спектрометра NaI(Tl) показана на рисунке~\ref{fig:jetPulseParams82715}~(c). На рисунке~\ref{fig:jetPulseTomography82715} представлена томографическая реконструкция интенсивности излучения в камере токамака, полученная с помощью гамма-камеры.
 
-\begin{figure}[ht!]
-  \centerfloat{ \includegraphics[width=0.75\linewidth]{jetPulseParams82715} }
-  \caption{ (a) --- ток по плазме в разряде №~82715 на токамаке JET ($I_p = 1,7$~МА, $B_t = 2$~Тл, $T_e = 1,8$~кэВ, $P_{NBI} = 2,3$~МВт); (b) ---  плотность электронов; (c) интенсивность жёсткого рентгеновского излучнения; (d) --- восстановленный ток убегающих электронов в видимом для вертикального спектрометра объеме плазмы, учтены только электроны с энергией больше чем 2~МэВ.~\cite{Shevelev2013} }
-  \label{fig:jetPulseParams82715}
-\end{figure}
 
 \begin{figure}[ht]
     \begin{minipage}[b][][b]{0.48\linewidth}\centering
@@ -90,6 +87,13 @@
     \label{fig:jetPulseTomography82715}
 \end{figure}
 
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.75\linewidth]{jetPulseParams82715} }
+  \caption{ (a) --- ток по плазме в разряде №~82715 на токамаке JET ($I_p = 1,7$~МА, $B_t = 2$~Тл, $T_e = 1,8$~кэВ, $P_{NBI} = 2,3$~МВт); (b) ---  плотность электронов; (c) интенсивность жёсткого рентгеновского излучнения; (d) --- восстановленный ток убегающих электронов в видимом для вертикального спектрометра объеме плазмы, учтены только электроны с энергией больше чем 2~МэВ.~\cite{Shevelev2013} }
+  \label{fig:jetPulseParams82715}
+\end{figure}
+
+
 % ==========================================================
 
 \FloatBarrier
@@ -99,8 +103,74 @@
 
 Ниже в этом разделе представлены результаты исследования параметров убегающих элекронов, генерируемых и регистрируемых во время квазистационарной стадии разряда JET-ILW после значительного снижения плотности плазмы. Эволюция измеряемых параметров плазмы (плотность, температура электронов, напряжение контура, ток плазмы) была численно обработана в рамках традиционной теории генерации убегающих электронов.~\cite{Plyusnin2015}
 
-Во время плоской стадии обычного разряда JET-ILW №~86078 внезапная потеря контроля над впуском рабочего газа привела к снижению плотности плазмы до чрезвычайно низкого значения: $ < n_e > \le 2.0\cdot10^{18}$~м${}^{-3}$, начиная с отметки времени примерно $t = 18.4$~с на рисунке~\ref{fig:}. (от прибл. t = 18,4 с на рис. 1). Этот режим с низкой плотностью сохраняется около 8 секунд. Нейтронная диагностика зафиксировала практически полное исчезновение выхода термоядерных нейтронов из дейтериевой плазмы после этого уменьшения плотности. Плазменный ток во время этой стадии низкой плотности поддерживался почти постоянным (Ipl ≅ 1,8 МА) до прекращения разряда (рис. 1). Измеренное напряжение контура (Vloop) в начале снижения плотности составило Vloop ≅ 0,65 В, что соответствует <Te> ≅ 1,5 кэВ, рассчитанному по классическому сопротивлению с неоклассической поправкой на долю захваченных частиц. Полученное значение <Te> очень близко к данным Te, предоставляемым другими диагностиками JET. В фазе низкой плотности средняя (дрейфовая) скорость течения увеличивается до u0 = (Ipl/πapl2)/(ene) ≤ 3,0E6 м/с, где apl — радиус плазмы (из EFIT), а <n e> — измеренная плотность плазмы. . Большая дрейфовая скорость (u0 ≅ 0,1vTe) неизбежно приведет к асимметрии функции распределения электронов (fe(ve)~ne*exp(-(ve-u0)2/vte2)). Простой расчет показывает, что возникшая асимметрия вызывает значительное увеличение числа электронов (до ~10%), движущихся в направлении ускорения. Это приводит к увеличению числа электронов со скоростями выше ! !!! !"! (!!!!"") критическая: ve > vDr =, где vDr - критическая скорость генерации первичных (драйсеровских) убегающих электронов (УЭ).
+Во время стадии плато обычного разряда JET-ILW №~86078 внезапная потеря контроля над впуском рабочего газа привела к снижению плотности плазмы до чрезвычайно низкого значения: $ < n_e > \le 2.0\cdot10^{18}$~м${}^{-3}$, начиная с отметки времени примерно $t = 18.4$~с на рисунке~\ref{fig:jetPulseParams86078}. Этот режим с низкой плотностью сохраняется в течении приблизительно 8~секунд. Нейтронная диагностика зафиксировала практически полное исчезновение выхода термоядерных нейтронов из дейтериевой плазмы после этого уменьшения плотности. Плазменный ток во время этой стадии низкой плотности поддерживался почти постоянным ($I_{pl} \approx 1.8$~МА) до прекращения разряда. Измеренное напряжение обхода $V_{loop}$ в начале фазы снижения плотности составило $V_{loop} = 0.65$~В, что соответствует $<T_e> = 1,5$~кэВ, если проводить вычисление по классическому сопротивлению с неоклассической поправкой на долю захваченных частиц.~\cite{Plyusnin2015} Полученное значение $<T_e>$ очень близко к величине $T_e$, предоставляемым другими диагностиками JET. В фазе низкой плотности средняя дрейфовая скорость увеличивается до $u_0 = (I_{pl}/\pi a_{pl}^2 )/(e n_e) \le 3,0\cdot10^6$~м/с, где $a_{pl}$ --- радиус плазменного шнура, полученный с помощью EFIT, а $<n_e>$ --- измеренная плотность плазмы. Большая дрейфовая скорость $u_0 \approx 0.1 \times v_{Te}$ ведёт к асимметрии функции распределения электронов 
+\begin{equation*}
+  f_e(v_e) \sim n_e \times \exp \left( -\frac{ ( v_e - u_0 )^2 }{ v_{te}^2 } \right)
+\end{equation*}
+Расчет показывает, что возникшая асимметрия вызывает значительное увеличение числа электронов (до примерно 10\%), движущихся в направлении ускорения. Это приводит к увеличению числа электронов со скоростями выше критической (выражение~\ref{eq:critVelocity}).
 
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.85\linewidth]{jetPulseParams86078} }
+  \caption{ Разряд №~86078 на токамаке JET. Слева --- эволюция различных параметров разряда, справа --- измерение напряжения обхода от времени. На обоих графиках розовым  выделена исследуемая стадия эволюции убегающих электронов, желтым --- фаза нестабильности пучка убегающих электронов.~\cite{Plyusnin2015} }
+  \label{fig:jetPulseParams86078}
+\end{figure}
+
+Согласно теории генерации убегающих электронов, за генерацию ответственны два механизма: первичный механизм, когда ускорение электронов внешним электрическим полем превышает сопротивление трения кулоновских столкновений с частицами плазмы, и вторичная лавина, когда существующие убегающие электроны передают часть энергии окружающим тепловым электронам за счет близких столкновений, что переводит их в режим убегания и позволяет увеличивать количество убегающих электронов в плазме. Ясно, что вторичное лавинообразование может произойти только в том случае, если первичная генерация обеспечит существенный поток убегающих электронов с достаточной энергией. 
+%Заметим, что столкновения на близком расстоянии в 8*lnΛ менее часты, чем обычные кулоновские (дальние) столкновения. 
+Динамика обоих процессов определяется в основном отношениями приложенного электрического поля к полю Дрейсера для процесса первичной генерации $\alpha = E_0/E_{D}$ (формула~\ref{eq:dreicerField}) и к критическом полю для лавинного механизма $\beta = E_0 / E_c $ (формула~\ref{eq:criticalField}).
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.85\linewidth]{jetPulseAlphaBeta86078} }
+  \caption{ Разряд №~86078 на токамаке JET. Эволюция параметров $\alpha$ и $\beta$ от времени.~\cite{Plyusnin2015} }
+  \label{fig:jetPulseAlphaBeta86078}
+\end{figure}
+
+На рисунке~\ref{fig:jetPulseAlphaBeta86078} представлена эволюция параметров $\alpha$ и $\beta$ на стадии низкой плотности. Генерация убегающих электронов моделировалась с помощью уравнений эволюции плотности
+\begin{equation*}
+  \frac{ d n_{RE} }{ d t } = \lambda_R - \frac{ n_{RE} }{ \tau_R } + \frac{ n_{RE} }{ t_0 }
+\end{equation*}
+где $\lambda_R$ --- скорость генерации первичных электронов, а параметр $t_0 \sim 1/(\beta - 1 )$ отвечает за генерацию вторичных электронов, $\tau_R$ --- время удержания убегающих электронов, которое далее предполагалось бесконечно большим.
+
+Моделирование выявило значительное увеличение скорости образования и одновременное снижение критической энергии убегания $\varepsilon_c = v_c^2 m_e /2$ (формула~\ref{eq:critVelocity}) при снижении плотности ниже $10^{19}$~м${}^{-3}$, т.е. при $t \ge 19.5$~с (рисунок~\ref{fig:jetPulseCriticalEnergy86078}). Важно отметить, что вклад от лавинного механизма генерации в общую популяцию убегающих электронов меньше, чем ожидалось; основной механизм --- это дрейсеровское ускорение при асимметричной функции распределения по энергии ($n_{RE} \approx 10^{15}$~м${}^{-3}$ при $t = 24$~с), что соответствует току убегающих электронов $I_{RE} \le 200$~кА/м${}^2$. Эволюция функции распределения убегающих электронов свидетельствует о том, что дальнейшее поддержание тока убегающих электронов обеспечивается за счет лавинного маханизма. Постепенное уменьшение напряжения контура указывает не только на увеличение средней температуры $<T_e>$, но и на увеличение доли убегающих электронов в общем токе плазмы $I_{pl} \approx 1.8$~МА. 
+%Напряжение обхода становится отрицательным при большой доле тока убегающих электронов. 
+После $t = 24$~с численный анализ экспериментальных данных невозможен из-за того, что напряжения контура инвертируется (меняет знак на противоположный). Одновременно с увеличением числа убегающих электронов вертикальный и горизонтальный детекторы жёсткого рентгеновского излучения регистрировали увеличение интенсивности излучения от центра плазмы (рисунок~\ref{fig:jetPulseHxrNaI86078}). Сцинтилляционный детектор FILD (Fast Ions Loss Diagnostics, рисунок~\ref{fig:jetPulseParams86078}) также зарегистрировал усиление сигнала, что связано с наличием жёсткого рентгеновского излучения, сгенерированного убегающими электронами. На рисунке~\ref{fig:jetPulseHxrTomography86078} представлена томографическая реконструкция профиля рентгеновского излучения из плазмы, выполненная на основе данных с гамма-камеры токамака JET.
+
+Спектрометрия так же использовалась для изучения динамики процесса генерации убегающих электронов (рисунок~\ref{fig:jetPulseEdf86078}). Были восстановлены распределения убегающих электронов по энергии, максимальная энергия убегающих электронов составила 7~МэВ, характерная энергия --- 2.5~МэВ.
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.65\linewidth]{jetPulseCriticalEnergy86078} }
+  \caption{ Разряд №~86078 на токамаке JET. Эволюция критической энергии (ось слева, чёрные точки) и скорости генерации (ось справа, синяя кривая) от времени.~\cite{Plyusnin2015} }
+  \label{fig:jetPulseCriticalEnergy86078}
+\end{figure}
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.65\linewidth]{jetPulseHxrNaI86078} }
+  \caption{ Разряд №~86078 на токамаке JET. Скорость счёта детектора жёсткого рентгеновского излучения NaI(Tl) с вертикальной линией обзора.~\cite{Plyusnin2015} }
+  \label{fig:jetPulseHxrNaI86078}
+\end{figure}
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.55\linewidth]{jetPulseHxrTomography86078} }
+  \caption{ Разряд №~86078 на токамаке JET. Томографическая реконструкция эмиссии жёсткого рентгеновского излучения по данным с гамма-камеры.~\cite{Plyusnin2015} }
+  \label{fig:jetPulseHxrTomography86078}
+\end{figure}
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.65\linewidth]{jetPulseEdf86078} }
+  \caption{ Разряд №~86078 на токамаке JET. Измеренный спектр жёсткого рентгеновского излучения (чёрные точки) и восстановленная функция распределения убегающих электронов (временное окно с 20.2 до 22.0~с).~\cite{Plyusnin2015} }
+  \label{fig:jetPulseEdf86078}
+\end{figure}
+
+% ==========================================================
+
+\FloatBarrier
+\section{Выводы к главе 5}
+
+На токамаке JET работают в настоящее время и работали в прошлом множество диагностик жёсткого рентгеновского излучения на основе сцинтилляционных кристаллов NaI(Tl), BGO, LaBr3(Ce), а так же полупроводниковый детектор HPGe высокого разрешения. Отдельно стоит упомянуть гамма-камеру, с помощью которой возможно выполнять томографическую реконструкцию двумерного профиля источника рентгеновского излучения в плазме. Результаты измерения записываются в систему хранения данных CODAS, из которой они впоследствии могут быть извлечены и обработаны. 
+
+С помощью компьютерного кода ``DeGaSum'' была проведена обработка результатов измерений жёсткого рентгеновского излучения, сгенерированного убегающими электронами в плазме. Для этого с помощью компьютерного кода MCNP были рассчитаны аппаратные функции детекторов BGO и NaI(Tl), а так же функции генерации убегающими электронами жёсткого рентгеновского излучения. Затем была отработана процедура восстановления функции распределения убегающих электронов по энергии. Возможно восстановление функции распределения в выбранном временном окне, таким образом возможно отследить эволюцию функции распределения во времени. Приведены результаты такого восстановления для нескольких разрядов. 
+
+Были рассмотрены и обработаны результаты измерения жёсткого рентгеновского излучения в разряде №~86078 на токамаке JET. В этом разряде внезапная потеря контроля над впуском рабочего газа привела к снижению плотности плазмы. Было исследовано поведение пучка убегающих электронов во время данного разряда, определены функция распределения и максимальная энергия убегающих электронов. 
 
 % ==========================================================
 
